--- a/src/components/AltTextRating/AltTextRatingTool.css
+++ b/src/components/AltTextRating/AltTextRatingTool.css
@@ -18,19 +18,38 @@ body.dark-mode .alt-card {
 }
 
 #alt-text-rating-form h1 {
-    text-align: center;
+    font-size: 1.8em;
     margin-top: 0px;
-    font-size: 1.5em; /* Adjusted for better readability */
-}
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-style: normal;
+    font-family: articulat-cf,sans-serif;
+  }
+
+  #alt-text-rating-form p {
+    margin-top: 0px;
+  }
+
+#textResults p {
+    margin-top: 5px;
+  }
 
 .results {
-    margin-top: 20px;
+    margin-top: 30px;
     font-size: 0.95em;
     word-wrap: break-word; /* Prevent long text from breaking the layout */
 }
 
+.checkbox-container {
+    align-items: center;
+    display: flex;
+    margin-bottom: 7px;
+  }
+
 .results p {
     margin-bottom: 4px;
+    margin-top: 0px;
     word-wrap: break-word; /* Prevent long text from breaking the layout */
 }
 
@@ -122,7 +141,7 @@ body.dark-mode .alt-card {
     padding: 10px 20px;
     font-size: 1em;
     border: none;
-    background-color: #007bff;
+    background-color: #3b9af8;
     color: white;
     border-radius: 5px;
     cursor: pointer;
@@ -241,7 +260,7 @@ body.dark-mode .alt-card {
   
   .alt-card {
     background: #fff;
-    padding: 20px;
+    padding: 35px 20px;
     margin-bottom: 20px;
   }
   
