--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -26,7 +26,7 @@
   }
   
   .footer-links a:hover {
-    color: #007bff; /* Change color on hover */
+    color: #3B9AF8; /* Change color on hover */
   }
   
   .footer-info p {
