--- a/src/components/MainApp/MainApp.css
+++ b/src/components/MainApp/MainApp.css
@@ -56,7 +56,7 @@ input {
 
 button {
   padding: 10px 20px;
-  background: #007bff;
+  background: #3B9AF8;
   color: #fff;
   border: none;
   border-radius: 4px;
