--- a/src/components/ScoreGenerator/ScoreResult.css
+++ b/src/components/ScoreGenerator/ScoreResult.css
@@ -146,7 +146,7 @@
 
 /* Bluesky Segment */
 .bluesky-segment {
-  background-color: #007bff; /* Blue color */
+  background-color: #3B9AF8; /* Blue color */
   position: relative;
   transition: opacity 0.3s ease;
 }
@@ -196,7 +196,7 @@
 .score-breakdown-header {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #007bff; /* Blue color to make it stand out */
+    color: #3B9AF8; /* Blue color to make it stand out */
     text-align: center;
     margin-bottom: 1rem;
 }
@@ -317,7 +317,7 @@ input#identityInput2 {
     top: 0;
     left: 0;
     height: 100%;
-    background: #007bff;
+    background: #3B9AF8;
     border-radius: 5px;
     z-index: 0;
     width: 100%;
@@ -455,7 +455,7 @@ input#identityInput2 {
 .score-breakdown-header {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #007bff; /* Blue color to make it stand out */
+    color: #3B9AF8; /* Blue color to make it stand out */
     text-align: center;
     margin-bottom: 1rem;
 }
