--- a/src/App.css
+++ b/src/App.css
@@ -59,19 +59,25 @@ body {
 }
 
 form {
-  margin: 20px auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
+  background: #fff;
+  border: 5px solid #ddd;
+  border-radius: 12px;
+  box-shadow: none;
+  gap: 15px;
+  justify-content: center;
+  margin: 10px auto;
+  max-width: 193px;
+  padding: 20px 30px;
 }
 
 input {
-  padding: 10px;
-  width: 100%;
-  max-width: 300px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 2px solid #ddd;
+  border-radius: 6px;
+  display: flex;
+  margin-top: 5px;
+  padding: 9px;
+  text-align: center;
+  width: auto;
 }
 
 button {
@@ -125,3 +131,43 @@ ul {
   background-color: #e6f3ff;
   outline: none;
 }
+
+.autocomplete-items {
+  background-color: #fff;
+  left: 0;
+  overflow: clip;
+  position: absolute;
+  right: 0;
+  top: 116%;
+  z-index: 99;
+  border: 2px solid #ddd;
+  border-radius: 6px;
+  gap: 3px;
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+}
+
+.autocomplete-item:hover {
+  background-color: #e9e9e9;
+  border-radius: 6px;
+  border: 2px solid #ddd;
+}
+
+  /* Avatar image */
+  .autocomplete-item img {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 7px;
+    object-fit: cover;
+  }
+
+    /* Hide the autocomplete container when it's empty */
+  .autocomplete-items:empty {
+    display: none;
+  }
+
+  .dark-mode .autocomplete-items {
+    color: black;
+  }
