add styles to home

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,8 @@ form {
   margin: 10px auto;
   max-width: 193px;
   padding: 20px 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 input {
