--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@ input {
   margin-top: 5px;
   padding: 9px;
   text-align: center;
+  max-width: 100%;
   width: auto;
 }
 
@@ -89,6 +90,8 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  max-width: 100px;
+  margin: auto;
 }
 
 button:hover {
