--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -31,11 +31,6 @@
   border-right: 0px;
 }
 
-form.search-bar {
-  align-items: center;
-  gap: 18px;
-}
-
 .search-bar input {
   border: 2px solid #ddd;
   border-radius: 6px;
@@ -46,20 +41,11 @@ form.search-bar {
   width: auto;
 }
 
-.search-bar button {
-  padding: 10px 20px;
-  font-size: 1em;
-  border: none;
-  background-color: #3B9AF8;
-  color: white;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  border: 1px solid #3B9AF8;
+form.search-bar {
+  align-items: center;
+  gap: 18px;
 }
 
-.search-bar button:hover {
-  background-color: #0056b3;
-}
 
 input:focus-visible {
   outline: 0px;
@@ -74,6 +60,10 @@ form {
 .dark-mode form {
   background-color: #292929;
   border: 1px solid #3f3f3f;
+}
+
+.search-bar button:hover {
+  background-color: #027cff;
 }
 
 /* New styles for suggestions */
