--- a/src/App.css
+++ b/src/App.css
@@ -74,12 +74,20 @@ form {
 input {
   border: 2px solid #ddd;
   border-radius: 6px;
-  display: flex;
-  margin-top: 5px;
+  max-width: 200px;
   padding: 9px;
   text-align: center;
-  max-width: 100%;
-  width: auto;
+  width: 100%;
+  margin: auto;
+  align-content: center;
+  justify-content: center;
+}
+
+@media (max-width: 450px) {
+  input {
+    max-width: 60%;
+    margin: auto;
+    }
 }
 
 input:hover {
@@ -99,7 +107,7 @@ button {
   color: #fff;
   cursor: pointer;
   margin: auto;
-  max-width: 100px;
+  max-width: 150px;
   padding: 10px 15px;
   font-weight: 700;
   font-size: 1em;
