--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,4 +1,10 @@
 .about-page {
-    max-width: 500px;
-    margin: 20px;
+    margin: 30px auto 20px;
+    max-width: 400px;
+    padding: 20px;
 }
+
+.about-page .alt-card {
+    text-align: left;
+    padding: 20px 30px;
+  }
