--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -150,5 +150,12 @@
 }
 
 .circular-badge {
-  margin-bottom: 10px;
+  margin-top: -38px;
+  margin-bottom: -21.5px;
+}
+
+.user-profile-name {
+  gap: 7px;
+  display: flex;
+  flex-direction: column;
 }
