--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,18 +2,17 @@
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
-  padding: 20px;
 }
 
 .search-bar {
   background: var(--navbar-bg);
-  border: 5px solid var(--button-bg);
+  border: 0px;
   border-radius: 12px;
   box-shadow: none;
   gap: 15px;
   justify-content: center;
   margin: 10px auto;
-  padding: 20px 30px;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   transition: background-color 0.3s ease, border-color 0.3s ease;
