--- a/src/components/PrivacyTerms/PrivacyTerms.css
+++ b/src/components/PrivacyTerms/PrivacyTerms.css
@@ -1,10 +1,14 @@
-.about-page {
+.privacy-terms-page {
     margin: 30px auto 20px;
     max-width: 400px;
-    padding: 20px;
+    padding: 3%;
 }
 
-.about-page .alt-card {
+.privacy-terms-page .alt-card {
     text-align: left;
-    padding: 20px 30px;
+  }
+
+  .privacy-terms-page p {
+    margin-top: 0.1em;
+    margin-bottom: 0.2em;
   }
