--- a/src/components/MatterLoadingAnimation.css
+++ b/src/components/MatterLoadingAnimation.css
@@ -1,7 +1,7 @@
 canvas {
     border-radius: 12px;
     background: #dedede !important;
-    border: 5px solid #bebebe;
+    border: 5px solid var(--card-border);
     max-width: 100%;
     max-height: 100%;
     user-select: none;
