--- a/src/components/UserProfile/components/AltTextCard.css
+++ b/src/components/UserProfile/components/AltTextCard.css
@@ -8,7 +8,6 @@
   }
 
   .alt-text-card h2 {
-    text-align: center;
     margin-bottom: 20px;
   }
   
@@ -17,7 +16,7 @@
     padding: 0;
     margin: 0px;
     margin-top: 10px;
-    text-align: center;
+    align-content: center;
   }
   
   .alt-text-card li {
