--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -86,7 +86,7 @@
   border: none;
   background-color: #a9a9a9;
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 6px;
   transition: background-color 0.3s;
 }
 
@@ -166,7 +166,9 @@
 }
 
 .grid-item {
-  overflow: visible !important;
+  overflow: scroll;
+  scroll-behavior: auto;
+  scrollbar-width: none;
 }
 
 .react-grid-item {
@@ -196,4 +198,8 @@
 
 .user-profile .recharts-responsive-container {
   max-width: 100%;
+}
+
+.share-button-container {
+  margin-top: 10px;
 }
