--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -203,3 +203,11 @@
 .share-button-container {
   margin-top: 10px;
 }
+
+.toggle-switch {
+  display: none;
+}
+
+.user-profile-activity {
+  text-transform: capitalize;
+}
