--- a/src/components/AltTextRating/AltTextRatingTool.css
+++ b/src/components/AltTextRating/AltTextRatingTool.css
@@ -17,7 +17,7 @@ body.dark-mode .alt-card {
 }
 
 #alt-text-rating-form h1 {
-    font-size: 1.8em;
+    font-size: 1.6em;
     margin-top: 0px;
     text-align: center;
     margin-bottom: 10px;
@@ -25,6 +25,7 @@ body.dark-mode .alt-card {
 
   #alt-text-rating-form p {
     margin-top: 0px;
+    font-size: 0.9em;
   }
 
 #textResults p {
@@ -278,18 +279,9 @@ body.dark-mode .alt-card {
         overflow: hidden;
       }
 
-
-@media (max-width: 450px) {
-    .gauge-container {
-        margin: 20px auto;
-        width: 100%;
-        max-width: 400px;
-        position: relative;
-        padding-bottom: 0;
-        margin-top: 25px;
-        margin-bottom: -16px;
+      .alt-text-rating-tool .search-bar {
+        margin-bottom: 0px;
       }
-}
 
 .alt-text-rating-tool ul {
     font-size: 0.9em;
@@ -310,3 +302,16 @@ body.dark-mode .alt-card {
   .share-button {
     background: gray !important;
   }
+
+
+@media (max-width: 450px) {
+    .gauge-container {
+        margin: 20px auto;
+        width: 100%;
+        max-width: 400px;
+        position: relative;
+        padding-bottom: 0;
+        margin-top: 25px;
+        margin-bottom: -16px;
+      }
+}
