--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -80,7 +80,7 @@
   
   .navbar-links ul li a {
     text-decoration: none;
-    color: #333333; /* Dark gray color for links */
+    color: #004f84; /* Dark gray color for links */
     font-size: 1rem;
     transition: color 0.3s ease;
   }
@@ -111,12 +111,6 @@
     background-color: gray;
     color: white;
     cursor: not-allowed;
-  }
-  
-  /* Dark Mode Styles */
-  .dark-mode .navbar {
-    background-color: #2c2c2c; /* Dark background */
-    border-bottom: 5px solid #444;
   }
   
   .dark-mode .navbar-logo a {
@@ -161,14 +155,10 @@
     border: none;
     cursor: pointer;
     font-size: 1rem;
-    color: #333333; /* Default text color */
+    color: var(--text);; /* Default text color */
     transition: color 0.3s ease;
     display: flex;
     align-items: center;
-  }
-  
-  .dark-mode .theme-toggle-button {
-    color: #f5f5f5; /* Light text in dark mode */
   }
   
   .theme-toggle-button svg {
@@ -185,12 +175,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: inherit;
+  color: var(--text);
   padding: 0px;
-}
-
-.dark-mode .theme-toggle-button {
-  color: #f5f5f5;
 }
 
 /* Icon styles */
@@ -199,7 +185,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
-  color: var(--text-color);
+  color: var(--text);
   transition: color 0.2s ease;
   scale: 1.3;
 }
@@ -255,7 +241,7 @@
 
 .beta-badge {
   align-content: center;
-  background: var(--card-border);
+  background: gray;
   border-radius: 4px;
   margin: 4px;
   padding: 3px 5px;
