--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -71,7 +71,7 @@
 }
 
 .login-form button:hover {
-  background: #0056b3;
+  background: #004F84;
 }
 
 .form-links {
@@ -87,7 +87,7 @@
 }
 
 .form-link:hover {
-  color: #0056b3;
+  color: #004F84;
 }
 
 .form-link.dark-mode {
