--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -113,15 +113,6 @@
   margin-bottom: 0px;
 }
 
-.user-profile-header-rechart {
-  max-width: 416.5px;
-  margin: auto;
-  height: 90.5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .text-center.font-semibold.mt-2 {
   margin-top: -18.5px;
   font-size: 1.4em;
@@ -247,6 +238,13 @@ tspan {
   opacity: 0.5;
 }
 
+.user-profile-header-rechart {
+  max-width: 416.5px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .user-profile-header-rechart {
   display: flex;
@@ -255,6 +253,10 @@ tspan {
   max-width: 300px;
   margin: 0 auto;
   padding: 1rem;
+}
+
+.score-gauge {
+  margin-right: 10px !important;
 }
 
 /* Responsive Adjustments for Cards */
